# EarthOnline

./: .gitignore
obsidian/Second Brian/.obsidian/: community-plugins.json  workspace.json
obsidian/Second Brian/工作台/: 代办.md
obsidian/Second Brian/日记/: 流水日记.md
obsidian/Second Brian/软件使用/Airtcp/: Airtcp 使用人名单.md
obsidian/Second Brian/软件使用/Obsidian/: obsidian 使用技巧.md  双向链接.md
obsidian/三光融合与识别处理软件/: 三光融合与识别处理软件培训手册.md  三光融合与识别处理软件文档管理中心.md  三光融合与识别处理软件方案报告.md  三光融合与识别处理软件测试大纲.md  三光融合与识别处理软件测试报告.md  三光融合与识别处理软件测试计划.md  三光融合与识别处理软件测试记录.md  三光融合与识别处理软件测试说明.md  三光融合与识别处理软件源代码.md  三光融合与识别处理软件用户手册.md  三光融合与识别处理软件研制任务书.md  三光融合与识别处理软件研制总结报告.md  三光融合与识别处理软件设计报告.md  三光融合与识别处理软件设计文档.md  三光融合与识别处理软件评审意见追踪管理.md  三光融合与识别处理软件配置及使用说明.md  三光融合与识别处理软件需求规格说明.md  未命名.md
obsidian/三光融合与识别处理软件/.obsidian/: graph.json  workspace.json
obsidian/三轮机器人/: robot_full_startup.launch.md  robot_navigation.rviz.md  start_devices.launch.md  tricycle_robot.xacro.md
obsidian/三轮机器人/.obsidian/: workspace.json
obsidian/地球Online/: 27所项目常用指令.md  同花顺.md  未命名 1.md  未命名 2.md  未命名 3.md  未命名.md  鲨鲨.md
obsidian/地球Online/.obsidian/: appearance.json  hotkeys.json  workspace.json
obsidian/地球Online/Prompts/: Prompts anki.md
obsidian/地球Online/River of Time/2026-04/: 2026-04-09.md  2026-04-10.md  2026-04-11.md  2026-04-12.md  2026-04-13.md  2026-04-14.md  2026-04-15.md  2026-04-16.md  2026-04-17.md  2026-04-18.md  2026-04-19.md  2026-04-20.md  2026-04-21.md  2026-04-23.md  2026-04-24.md  2026-04-25.md  2026-04-26.md  2026-04-27.md  2026-04.md
obsidian/地球Online/River of Time/2026-05/: 2026-05-01.md  2026-05-02.md
obsidian/小布小布/: 20260110训练日志.md  yolo_visualizer.py  yolov5训练自己的数据集.md  yolo数据集txt版本可视化代码.md  yolo数据集清理空txt标签.md  实验记录.md  小车调试.md  服务器管理注意事项简章.md  未命名 1.md  未命名 10.md  未命名 11.md  未命名 12.md  未命名 13.md  未命名 15.md  未命名 3.md  未命名 4.md  未命名 5.md  未命名 6.md  未命名 7.md  未命名 9.md  未命名.md  清理.md  点云.md  船舶识别任务训练.md  连接服务器.md  雷达.md
obsidian/小布小布/.obsidian/: workspace.json
obsidian/小布小布/杂项/: chrome总是遇到问题.md  git 使用记录.md  内网穿透记录.md  密码本.md  录播处理步骤.md  服务器用户名密码.md  未命名 1.md  未命名.md  百度网盘隐藏空间.md  眼底血管影像实验.md  科研成果记录.md  访问内网服务器的办法.md  重庆计划.md
project/VIS_NIR_Radar_Fusion_CCT2143_XMU_main/: CMakeLists.txt  config.json
project/VIS_NIR_Radar_Fusion_CCT2143_XMU_main/include/: Config.h  Detector.h  GetLidarData.h  GetLidarData_CX128S2.h  LidarManualSelection.h  Logger.h  NetworkManager.h  RGAOperations.h  RTSPPush.h  Utils.h  WorkFlow.h  WorkFlowUtils.h
project/VIS_NIR_Radar_Fusion_CCT2143_XMU_main/src/: Config.cpp  Detector.cpp  GetLidarData.cpp  GetLidarData_CX128S2.cpp  LidarManualSelection.cpp  Logger.cpp  NetworkManager.cpp  RGAOperations.cpp  Utils.cpp  WorkFlow.cpp  WorkFlowUtils.cpp  main.cpp
project/shasha/Argus/: README.md
project/shasha/Argus/phase-1-napcat/: docker-compose.yml
project/shasha/Argus/phase-3-uploader/: baidu_upload_monitor.py
project/shasha/Argus/phase-4-monitor/: docker-compose.yml
project/shasha/Argus/phase-5-website/: .flaskenv
(+37 files in other folders)
